// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`binary expression layout preserves a comment before a binary right operand 1`] = `
"module Example {
  pure val answer = true and
    // Preserve this right operand comment.
    false
}
"
`;

exports[`binary expression layout preserves a same-line comment after a binary operator 1`] = `
"module Example {
  pure val answer = true implies // Preserve this operator comment.
    false
}
"
`;

exports[`binary expression layout preserves a line break after a binary operator 1`] = `
"module Example {
  pure val answer =
      true and
          false
}
"
`;

exports[`binary expression layout uses a four-space right-operand continuation 1`] = `
"module Example {
  pure def valid(flag: bool): bool =
      flag implies
          true
}
"
`;

exports[`binary expression layout preserves a multiline map value after the arrow 1`] = `
"module Example {
  pure val result = Map(
      "root" ->
        Map(
            "child" -> 1
        )
  )
}
"
`;

exports[`binary expression layout preserves a leading binary continuation in an expanded call argument 1`] = `
"module Example {
  run example = {
    assert(
        1
            == 1
    )
  }
}
"
`;

exports[`binary expression layout preserves a leading binary continuation in a block combinator 1`] = `
"module Example {
  pure val holds = and {
    1.in(Set(1, 2))
        implies 1 == 1,
  }
}
"
`;

exports[`binary expression layout preserves a binary right-operand continuation in a block combinator 1`] = `
"module Example {
  pure val holds = and {
    1.in(Set(1, 2)) implies
        1 == 1,
  }
}
"
`;

exports[`binary expression layout preserves a three-line binary expression in an ordinary block 1`] = `
"module Example {
  pure val holds = Set(1, 2).forall(first => {
    Set(1, 2).forall(second => {
      first == second
          implies
              first != 0
    })
  })
}
"
`;

exports[`binary expression layout aligns multiline match operands at the same level 1`] = `
"module Example {
  type Maybe = Some(int) | None

  pure def valid(left: Maybe, right: Maybe): bool = {
    match left {
      | None => true
      | Some(_) => false
    }
    and
    match right {
      | None => true
      | Some(_) => false
    }
  }
}
"
`;

exports[`binary expression layout preserves a nested-definition right operand 1`] = `
"module Example {
  pure val holds = {
    val values = Set(1, 2)

    values.size() == 2 implies
        val selected = 1

        selected == 1
  }
}
"
`;

exports[`binary expression layout preserves a binary continuation in a lambda body 1`] = `
"module Example {
  pure val chains = Set("a")

  pure val valid =
      chains.forall(chain =>
        chain != "b" implies
            chain == "a"
      )
}
"
`;

exports[`binary expression layout preserves a leading binary continuation inside a block entry call 1`] = `
"module Example {
  run check =
    all {
      assert(Set(1, 2, 3).size()
          == 3),
      true
    }
}
"
`;

exports[`binary expression layout uses a two-space continuation for a multiline lambda right operand 1`] = `
"module Example {
  pure def check(values: Set[int]): bool = {
    values.size() > 0 implies
      values.forall(value => {
        val positive = value > 0
        positive
      })
  }
}
"
`;
